--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vanilla-app</title>
+    <link rel="stylesheet" href="css/video.css">
+    <link rel="stylesheet" href="css/timer.css">
+    <link rel="stylesheet" href="css/currency.css">
+    <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
